--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     const publicId = "AUbpqLcrz0c0beB";
     const scriptId = "0a73890d-f8d1-463a-9e86-195da2c8c5bf";
 
-    console.log("[Embed Script] Requesting session for:", { publicId, scriptId, embeddingOrigin });
+    console.log("[Embed Script] Requesting session for:", { publicId, scriptId });
 
     // ✅ Request a session from the backend
     fetch(`${BACKEND_URL}`, {
