--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.jsx"></script>
     <script>
                        (function () {
-    const BACKEND_URL = "http://localhost:3001/api/v1/session";
+    const BACKEND_URL = "http://localhost:3001/api/v1/session/generate";
     
     // ✅ Define the publicId and scriptId (can be dynamic if needed)
     const publicId = "AUbpqLcrz0c0beB";
