--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
    (async function() {
   const publicId = "AUbpqLcrz0c0beB";
   const scriptId = "0a73890d-f8d1-463a-9e86-195da2c8c5bf";
@@ -51,7 +52,7 @@
   }
 })();
 
-
+</script>
 
   </body>
 </html>
