--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       headers: {
         "Content-Type": "application/javascript",
         "Referer": window.location.href,
-        "Origin": window.location.origin"
+        "Origin": window.location.origin
       },
       credentials: "include"
     });
