--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
      
      
    
+ 
      <script>
       !async function() {
       try {
-         const response = await fetch("https://embed-service-staging.up.railway.app/api/v1/user/widget/generate?scriptId=44355fca-be82-40b8-a810-a224e01f03f4", {
+         const response = await fetch("http://localhost:3001/api/v1/user/widget/generate?scriptId=99be48ca-810b-4c85-b67e-912f1efc7759", {
             headers: {
             Referer: location.href,
             Origin: location.origin
@@ -36,6 +37,7 @@
       }
       }();
    </script>
+   
    
    
    
